addon/styles/_pix-select.scss
.pix-select {
  @import 'reset-css';

  position: relative;

  @mixin pixSelect {
    appearance: none;
    border: 1px $pix-neutral-40 solid;
    border-radius: 4px;
    color: $pix-neutral-90;
    font-family: $font-roboto;
    font-size: 0.875rem;
    height: 36px;
    max-width: 100%;
    text-overflow: ellipsis;

    @include hoverFormElement();
    @include focusFormElement();
    @include focusWithinFormElement();
  }

  select {
    @include pixSelect;
    padding: 0 32px 0 16px;

    &.pix-select--big {
      height: 44px;
    }

    &::-ms-expand {
      display: none;
    }
  }

  input {
    @include pixSelect;
    padding: 0 8px 0 16px;

    &.pix-select--big {
      height: 44px;
    }

    // Remove arrow for Chrome
    &::-webkit-calendar-picker-indicator {
      display: none;
    }

    &.pix-select--is-valid:focus,
    &.pix-select--is-valid:focus-within {
      border-color: $green;
    }
  }

  &__icon {
    font-size: 11px;
    color: $pix-neutral-30;
    right: 10px;
    top: calc(50% - 6px);
    padding: 0 0 2px;
    position: absolute;
    pointer-events: none;
  }

  &__label {
    @include label();
  }

  .pix-select__label ~ .pix-select__icon {
    top: calc(50% + 6px);
  }
}

